syntax = "proto3";

package types;

// CycleBoundaryInfo cycle
message CycleBoundaryInfo {
    int64  cycle      = 1;
    int64  stopHeight = 2;
    string stopHash   = 3;
}

// SuperNode
message SuperNode {
    bytes address = 1;
    bytes pubKey  = 2;
}

// VoteItem
message VoteItem {
    int32             votedNodeIndex   = 1; //
    bytes             votedNodeAddress = 2; //
    int64             cycle            = 3; //
    int64             cycleStart       = 4; //
    int64             cycleStop        = 5; //
    int64             periodStart      = 6; //
    int64             periodStop       = 7; //
    int64             height           = 8; //
    bytes             voteID           = 9; //  ID
    CycleBoundaryInfo lastCBInfo       = 10;
    int64             shuffleType      = 11;
    repeated SuperNode validators      = 12;
    repeated SuperNode vrfValidators   = 13;
    repeated SuperNode noVrfValidators = 14;
}

// DPosVote Dpos       ，      。
message DPosVote {
    VoteItem voteItem         = 1;
    int64    voteTimestamp    = 2; //
    int32    voterNodeIndex   = 3; //
    bytes    voterNodeAddress = 4; //
    bytes    signature        = 5; //
}

// DPosVoteReply     。
message DPosVoteReply {
    DPosVote vote = 1;
}

// DPosNotify Dpos           ，                  。
message DPosNotify {
    VoteItem vote              = 1;
    int64    heightStop        = 2; //
    bytes    hashStop          = 3; //          hash
    int64    notifyTimestamp   = 4; //
    int32    notifyNodeIndex   = 5; //
    bytes    notifyNodeAddress = 6; //
    bytes    signature         = 7; //
}

// DPosCBInfo Cycle boundary    。
message DPosCBInfo {
    int64  cycle      = 1;
    int64  stopHeight = 2;
    string stopHash   = 3;
    string pubkey     = 4;
    string signature  = 5;
}
